@@ -4,6 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.atLeastOnce;
@@ -13,14 +14,17 @@ import static org.mockito.Mockito.when;
 
 import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Member;
+import java.util.Collections;
 import java.util.List;
 
 import javax.persistence.metamodel.Attribute;
 import javax.persistence.metamodel.EmbeddableType;
+import javax.persistence.metamodel.EntityType;
 import javax.persistence.metamodel.ManagedType;
 
 import org.apache.olingo.commons.api.edm.EdmPrimitiveTypeKind;
 import org.apache.olingo.commons.api.edm.provider.CsdlAnnotation;
+import org.apache.olingo.commons.api.edm.provider.annotation.CsdlConstantExpression;
 import org.apache.olingo.commons.api.edm.provider.annotation.CsdlConstantExpression.ConstantExpressionType;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -28,110 +32,166 @@ import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 
 import com.sap.olingo.jpa.metadata.api.JPAEdmMetadataPostProcessor;
-import com.sap.olingo.jpa.metadata.core.edm.annotation.EdmDescriptionAssoziation;
+import com.sap.olingo.jpa.metadata.core.edm.annotation.EdmDescriptionAssociation;
+import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAAssociationPath;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAEdmNameBuilder;
+import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAStructuredType;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.exception.ODataJPAModelException;
-import com.sap.olingo.jpa.metadata.core.edm.mapper.extention.IntermediateEntityTypeAccess;
-import com.sap.olingo.jpa.metadata.core.edm.mapper.extention.IntermediateNavigationPropertyAccess;
-import com.sap.olingo.jpa.metadata.core.edm.mapper.extention.IntermediatePropertyAccess;
-import com.sap.olingo.jpa.metadata.core.edm.mapper.extention.IntermediateReferenceList;
+import com.sap.olingo.jpa.metadata.core.edm.mapper.extension.IntermediateEntityTypeAccess;
+import com.sap.olingo.jpa.metadata.core.edm.mapper.extension.IntermediateNavigationPropertyAccess;
+import com.sap.olingo.jpa.metadata.core.edm.mapper.extension.IntermediatePropertyAccess;
+import com.sap.olingo.jpa.metadata.core.edm.mapper.extension.IntermediateReferenceList;
 import com.sap.olingo.jpa.processor.core.testmodel.BusinessPartner;
+import com.sap.olingo.jpa.processor.core.testmodel.Country;
+import com.sap.olingo.jpa.processor.core.testmodel.Person;
 
-public class TestIntermediateDescriptionProperty extends TestMappingRoot {
+class TestIntermediateDescriptionProperty extends TestMappingRoot {
   private TestHelper helper;
   private IntermediateDescriptionProperty cut;
   private JPAEdmMetadataPostProcessor processor;
+  private IntermediateStructuredType<?> et;
   private JPAEdmNameBuilder nameBuilder;
 
   @BeforeEach
-  public void setup() throws ODataJPAModelException {
+  void setup() throws ODataJPAModelException {
     helper = new TestHelper(emf.getMetamodel(), PUNIT_NAME);
     processor = mock(JPAEdmMetadataPostProcessor.class);
     nameBuilder = new JPADefaultEdmNameBuilder(PUNIT_NAME);
+    final EntityType<?> type = helper.getEntityType(BusinessPartner.class);
+    et = new IntermediateEntityType<>(nameBuilder, type, helper.schema);
     IntermediateModelElement.setPostProcessor(new DefaultEdmPostProcessor());
   }
 
   @Test
-  public void checkProptertyCanBeCreated() throws ODataJPAModelException {
-    final EmbeddableType<?> emtype = helper.getEmbeddedableType("PostalAddressData");
+  void checkPropertyCanBeCreated() throws ODataJPAModelException {
+    final EmbeddableType<?> emtype = helper.getEmbeddableType("PostalAddressData");
     final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(emtype, "countryName");
-    assertNotNull(new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, helper.schema));
+    assertNotNull(new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema));
   }
 
   @Test
-  public void checkGetProptertyNameOneToMany() throws ODataJPAModelException {
-    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddedableType("PostalAddressData"),
-        "countryName");
-    cut = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME), jpaAttribute,
-        helper.schema);
+  void checkGetDescriptionAttributeReturnsAttribute() throws ODataJPAModelException {
+    createDefaultCut();
+    assertNotNull(cut.getDescriptionAttribute());
+    assertEquals("name", cut.getDescriptionAttribute().getInternalName());
+  }
+
+  @Test
+  void checkGetFixedValueAssignmentReturnsEmptyList() throws ODataJPAModelException {
+    createDefaultCut();
+    assertNotNull(cut.getFixedValueAssignment());
+    assertTrue(cut.getFixedValueAssignment().isEmpty());
+  }
+
+  @Test
+  void checkGetFixedValueAssignmentReturnsList() throws ODataJPAModelException {
+    final EntityType<?> type = helper.getEntityType(Person.class);
+    et = new IntermediateEntityType<>(nameBuilder, type, helper.schema);
+    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEntityType(BusinessPartner.class),
+        "locationName");
+    cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
+    cut.lazyBuildEdmItem();
+    assertNotNull(cut.getFixedValueAssignment());
+    assertEquals(2, cut.getFixedValueAssignment().size());
+  }
+
+  @Test
+  void checkGetTypeReturnsDescAttributeType() throws ODataJPAModelException {
+    createDefaultCut();
+    assertNotNull(cut.getType());
+    assertEquals(String.class, cut.getType());
+  }
+
+  @Test
+  void checkIsAssociationReturnsTrue() throws ODataJPAModelException {
+    createDefaultCut();
+    assertTrue(cut.isAssociation());
+  }
+
+  @Test
+  void checkGetLocaleFieldNameReturnsPath() throws ODataJPAModelException {
+    createDefaultCut();
+    assertNotNull(cut.getLocaleFieldName());
+    assertEquals("\"LanguageISO\"", cut.getLocaleFieldName().getDBFieldName());
+  }
+
+  @Test
+  void checkGetPropertyNameOneToMany() throws ODataJPAModelException {
+    createDefaultCut();
     assertEquals("CountryName", cut.getEdmItem().getName(), "Wrong name");
   }
 
   @Test
-  public void checkGetProptertyNameManyToMany() throws ODataJPAModelException {
-    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddedableType("PostalAddressData"),
+  void checkGetPropertyNameManyToMany() throws ODataJPAModelException {
+    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddableType("PostalAddressData"),
         "regionName");
-    cut = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME), jpaAttribute,
-        helper.schema);
+    cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
     assertEquals("RegionName", cut.getEdmItem().getName(), "Wrong name");
   }
 
   @Test
-  public void checkGetProptertyType() throws ODataJPAModelException {
-    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddedableType("PostalAddressData"),
+  void checkGetPropertyType() throws ODataJPAModelException {
+    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddableType("PostalAddressData"),
         "countryName");
-    cut = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME), jpaAttribute,
-        helper.schema);
+    cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
     assertEquals(EdmPrimitiveTypeKind.String.getFullQualifiedName().getFullQualifiedNameAsString(),
         cut.getEdmItem().getType(), "Wrong type");
   }
 
   @Test
-  public void checkGetProptertyIgnoreFalse() throws ODataJPAModelException {
-    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddedableType("PostalAddressData"),
+  void checkGetTargetEntity() throws ODataJPAModelException {
+    createDefaultCut();
+    final JPAStructuredType target = cut.getTargetEntity();
+    assertEquals("Country", target.getExternalName());
+  }
+
+  @Test
+  void checkGetPartnerNull() throws ODataJPAModelException {
+    createDefaultCut();
+    assertNull(cut.getPartner());
+  }
+
+  @Test
+  void checkGetPropertyIgnoreFalse() throws ODataJPAModelException {
+    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddableType("PostalAddressData"),
         "countryName");
-    final IntermediatePropertyAccess property = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(
-        PUNIT_NAME),
-        jpaAttribute,
+    final IntermediatePropertyAccess property = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et,
         helper.schema);
     assertFalse(property.ignore());
   }
 
   @Test
-  public void checkGetProptertyFacetsNullableTrue() throws ODataJPAModelException {
-    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddedableType("PostalAddressData"),
+  void checkGetPropertyFacetsNullableTrue() throws ODataJPAModelException {
+    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddableType("PostalAddressData"),
         "countryName");
-    cut = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME), jpaAttribute,
-        helper.schema);
+    cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
     assertTrue(cut.getEdmItem().isNullable());
   }
 
   @Test
-  public void checkGetProptertyMaxLength() throws ODataJPAModelException {
-    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddedableType("PostalAddressData"),
+  void checkGetPropertyMaxLength() throws ODataJPAModelException {
+    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddableType("PostalAddressData"),
         "countryName");
-    cut = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME), jpaAttribute,
-        helper.schema);
-    assertEquals(new Integer(100), cut.getEdmItem().getMaxLength());
+    cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
+    assertEquals(Integer.valueOf(100), cut.getEdmItem().getMaxLength());
   }
 
   @Test
-  public void checkWrongPathElementThrowsEcxeption() {
+  void checkWrongPathElementThrowsException() {
 
     final Attribute<?, ?> jpaAttribute = mock(Attribute.class);
-    final EdmDescriptionAssoziation assoziation = prepareCheckPath(jpaAttribute);
+    final EdmDescriptionAssociation association = prepareCheckPath(jpaAttribute);
 
-    final EdmDescriptionAssoziation.valueAssignment[] valueAssignments =
-        new EdmDescriptionAssoziation.valueAssignment[1];
-    final EdmDescriptionAssoziation.valueAssignment valueAssignment = mock(
-        EdmDescriptionAssoziation.valueAssignment.class);
+    final EdmDescriptionAssociation.valueAssignment[] valueAssignments =
+        new EdmDescriptionAssociation.valueAssignment[1];
+    final EdmDescriptionAssociation.valueAssignment valueAssignment = mock(
+        EdmDescriptionAssociation.valueAssignment.class);
     valueAssignments[0] = valueAssignment;
     when(valueAssignment.attribute()).thenReturn("communicationData/dummy");
-    when(assoziation.valueAssignments()).thenReturn(valueAssignments);
+    when(association.valueAssignments()).thenReturn(valueAssignments);
 
     try {
-      cut = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME), jpaAttribute,
-          helper.schema);
+      cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
       cut.getEdmItem();
     } catch (final ODataJPAModelException e) {
       return;
@@ -140,22 +200,21 @@ public class TestIntermediateDescriptionProperty extends TestMappingRoot {
   }
 
   @Test
-  public void checkWrongPathStartThrowsEcxeption() {
+  void checkWrongPathStartThrowsException() {
 
     final Attribute<?, ?> jpaAttribute = mock(Attribute.class);
-    final EdmDescriptionAssoziation assoziation = prepareCheckPath(jpaAttribute);
+    final EdmDescriptionAssociation association = prepareCheckPath(jpaAttribute);
 
-    final EdmDescriptionAssoziation.valueAssignment[] valueAssignments =
-        new EdmDescriptionAssoziation.valueAssignment[1];
-    final EdmDescriptionAssoziation.valueAssignment valueAssignment = mock(
-        EdmDescriptionAssoziation.valueAssignment.class);
+    final EdmDescriptionAssociation.valueAssignment[] valueAssignments =
+        new EdmDescriptionAssociation.valueAssignment[1];
+    final EdmDescriptionAssociation.valueAssignment valueAssignment = mock(
+        EdmDescriptionAssociation.valueAssignment.class);
     valueAssignments[0] = valueAssignment;
     when(valueAssignment.attribute()).thenReturn("communicationDummy/dummy");
-    when(assoziation.valueAssignments()).thenReturn(valueAssignments);
+    when(association.valueAssignments()).thenReturn(valueAssignments);
 
     try {
-      cut = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME), jpaAttribute,
-          helper.schema);
+      cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
       cut.getEdmItem();
     } catch (final ODataJPAModelException e) {
       return;
@@ -164,10 +223,10 @@ public class TestIntermediateDescriptionProperty extends TestMappingRoot {
   }
 
   @SuppressWarnings({ "rawtypes", "unchecked" })
-  private EdmDescriptionAssoziation prepareCheckPath(final Attribute<?, ?> jpaAttribute) {
+  private EdmDescriptionAssociation prepareCheckPath(final Attribute<?, ?> jpaAttribute) {
     final AnnotatedMember jpaField = mock(AnnotatedMember.class);
     final ManagedType jpaManagedType = mock(ManagedType.class);
-    final EdmDescriptionAssoziation assoziation = mock(EdmDescriptionAssoziation.class);
+    final EdmDescriptionAssociation association = mock(EdmDescriptionAssociation.class);
 
     when(jpaAttribute.getJavaType()).thenAnswer(new Answer<Class<BusinessPartner>>() {
       @Override
@@ -180,20 +239,19 @@ public class TestIntermediateDescriptionProperty extends TestMappingRoot {
     when(jpaAttribute.getDeclaringType()).thenReturn(jpaManagedType);
     when(jpaManagedType.getJavaType()).thenReturn(BusinessPartner.class);
 
-    when(jpaField.getAnnotation(EdmDescriptionAssoziation.class)).thenReturn(assoziation);
+    when(jpaField.getAnnotation(EdmDescriptionAssociation.class)).thenReturn(association);
 
-    when(assoziation.descriptionAttribute()).thenReturn("country");
-    when(assoziation.languageAttribute()).thenReturn("language");
-    when(assoziation.localeAttribute()).thenReturn("");
-    return assoziation;
+    when(association.descriptionAttribute()).thenReturn("country");
+    when(association.languageAttribute()).thenReturn("language");
+    when(association.localeAttribute()).thenReturn("");
+    return association;
   }
 
   @Test
-  public void checkAnnotations() throws ODataJPAModelException {
+  void checkAnnotations() throws ODataJPAModelException {
     final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEntityType(BusinessPartner.class),
         "locationName");
-    cut = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME), jpaAttribute,
-        helper.schema);
+    cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
     final List<CsdlAnnotation> annotations = cut.getEdmItem().getAnnotations();
     assertEquals(1, annotations.size());
     assertEquals("Core.IsLanguageDependent", annotations.get(0).getTerm());
@@ -203,43 +261,136 @@ public class TestIntermediateDescriptionProperty extends TestMappingRoot {
   }
 
   @Test
-  public void checkPostProcessorCalled() throws ODataJPAModelException {
+  void checkPostProcessorCalled() throws ODataJPAModelException {
     // PostProcessorSpy spy = new PostProcessorSpy();
     IntermediateModelElement.setPostProcessor(processor);
-    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddedableType("PostalAddressData"),
+    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddableType("PostalAddressData"),
         "countryName");
-    cut = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME), jpaAttribute,
-        helper.schema);
-
+    cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
     cut.getEdmItem();
     verify(processor, atLeastOnce()).processProperty(cut, ADDR_CANONICAL_NAME);
   }
 
   @Test
-  public void checkPostProcessorNameChanged() throws ODataJPAModelException {
+  void checkPostProcessorAnnotationAdded() throws ODataJPAModelException {
     final PostProcessorSetName pPDouble = new PostProcessorSetName();
     IntermediateModelElement.setPostProcessor(pPDouble);
-
-    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddedableType("PostalAddressData"),
+    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddableType("PostalAddressData"),
         "countryName");
-    cut = new IntermediateDescriptionProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME), jpaAttribute,
-        helper.schema);
+    cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
 
-    assertEquals("CountryDescription", cut.getEdmItem().getName(), "Wrong name");
+    assertEquals(1L, cut.getEdmItem().getAnnotations().stream().filter(a -> a.getTerm().equals("Immutable")).count());
   }
 
   @Test
-  public void checkPostProcessorExternalNameChanged() throws ODataJPAModelException {
-    final PostProcessorSetName pPDouble = new PostProcessorSetName();
-    IntermediateModelElement.setPostProcessor(pPDouble);
+  void checkEmptyAssociationThrowsException() throws ODataJPAModelException {
 
-    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddedableType("PostalAddressData"),
-        "countryName");
-    final IntermediatePropertyAccess property = new IntermediateSimpleProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME),
-        jpaAttribute,
-        helper.schema);
+    final IntermediateDescriptionProperty cut = new IntermediateDescriptionProperty(nameBuilder, createAttributeMock(
+        false, false, 0), et, helper.schema);
+    final ODataJPAModelException act = assertThrows(ODataJPAModelException.class, () -> cut.lazyBuildEdmItem());
+    assertEquals(ODataJPAModelException.MessageKeys.DESCRIPTION_ANNOTATION_MISSING.getKey(), act.getId());
+  }
 
-    assertEquals("CountryDescription", property.getExternalName(), "Wrong name");
+  @Test
+  void checkUnknownAttributeAtTargetThrowsException() throws ODataJPAModelException {
+
+    final IntermediateDescriptionProperty cut = new IntermediateDescriptionProperty(nameBuilder, createAttributeMock(
+        true, false, 0), et, helper.schema);
+    final ODataJPAModelException act = assertThrows(ODataJPAModelException.class, () -> cut.lazyBuildEdmItem());
+    assertEquals(ODataJPAModelException.MessageKeys.INVALID_DESCRIPTION_PROPERTY.getKey(), act.getId());
+  }
+
+  @Test
+  void checkNoLocationAtTargetThrowsException() throws ODataJPAModelException {
+
+    final IntermediateDescriptionProperty cut = new IntermediateDescriptionProperty(nameBuilder, createAttributeMock(
+        true, true, 0), et, helper.schema);
+    final ODataJPAModelException act = assertThrows(ODataJPAModelException.class, () -> cut.lazyBuildEdmItem());
+    assertEquals(ODataJPAModelException.MessageKeys.DESCRIPTION_LOCALE_FIELD_MISSING.getKey(), act.getId());
+  }
+
+  @Test
+  void checkLocationAndLanguageAtTargetThrowsException() throws ODataJPAModelException {
+
+    final IntermediateDescriptionProperty cut = new IntermediateDescriptionProperty(nameBuilder, createAttributeMock(
+        true, true, 2), et, helper.schema);
+    final ODataJPAModelException act = assertThrows(ODataJPAModelException.class, () -> cut.lazyBuildEdmItem());
+    assertEquals(ODataJPAModelException.MessageKeys.DESCRIPTION_LOCALE_FIELD_MISSING.getKey(), act.getId());
+  }
+
+  @Test
+  void checkGetPathReturns() throws ODataJPAModelException {
+    createDefaultCut();
+    assertNotNull(cut.getPath());
+  }
+
+  @Test
+  void checkPathLeftColumnsListEmpty() throws ODataJPAModelException {
+    createDefaultCut();
+    assertTrue(cut.getPath().getLeftColumnsList().isEmpty());
+  }
+
+  @Test
+  void checkPathRightColumnsListEmpty() throws ODataJPAModelException {
+    createDefaultCut();
+    assertTrue(cut.getPath().getRightColumnsList().isEmpty());
+  }
+
+  @Test
+  void checkGetLeafNull() throws ODataJPAModelException {
+    createDefaultCut();
+    assertNull(cut.getPath().getLeaf());
+  }
+
+  @Test
+  void checkPathGetPathEmpty() throws ODataJPAModelException {
+    createDefaultCut();
+    assertTrue(cut.getPath().getPath().isEmpty());
+  }
+
+  @Test
+  void checkPathGetInverseLeftJoinColumnsListEmpty() throws ODataJPAModelException {
+    createDefaultCut();
+    assertTrue(cut.getPath().getInverseLeftJoinColumnsList().isEmpty());
+  }
+
+  @Test
+  void checkPathIsCollectionFalse() throws ODataJPAModelException {
+    createDefaultCut();
+    assertFalse(cut.getPath().isCollection());
+  }
+
+  @Test
+  void checkPathGetPartnerNull() throws ODataJPAModelException {
+    createDefaultCut();
+    assertNull(cut.getPath().getPartner());
+  }
+
+  @Test
+  void checkPathGetJoinTableNull() throws ODataJPAModelException {
+    createDefaultCut();
+    assertNull(cut.getPath().getJoinTable());
+  }
+
+  @Test
+  void checkPathGetSource() throws ODataJPAModelException {
+    createDefaultCut();
+    final JPAStructuredType act = cut.getPath().getSourceType();
+    assertEquals("BusinessPartner", act.getExternalName());
+  }
+
+  @Test
+  void checkPathGetAliasNull() throws ODataJPAModelException {
+    createDefaultCut();
+    final JPAAssociationPath act = cut.getPath();
+    assertNull(act.getAlias());
+  }
+
+  @Test
+  void checkPathHasJoinTableNull() throws ODataJPAModelException {
+    createDefaultCut();
+    final JPAAssociationPath act = cut.getPath();
+    assertNull(act.getJoinTable());
   }
 
   private class PostProcessorSetName extends JPAEdmMetadataPostProcessor {
@@ -248,7 +399,10 @@ public class TestIntermediateDescriptionProperty extends TestMappingRoot {
     public void processProperty(final IntermediatePropertyAccess property, final String jpaManagedTypeClassName) {
       if (jpaManagedTypeClassName.equals(ADDR_CANONICAL_NAME)) {
         if (property.getInternalName().equals("countryName")) {
-          property.setExternalName("CountryDescription");
+          final CsdlAnnotation annotation = new CsdlAnnotation();
+          annotation.setTerm("Immutable");
+          annotation.setExpression(new CsdlConstantExpression(ConstantExpressionType.Bool, "true"));
+          property.addAnnotations(Collections.singletonList(annotation));
         }
       }
     }
@@ -266,5 +420,52 @@ public class TestIntermediateDescriptionProperty extends TestMappingRoot {
 
   private interface AnnotatedMember extends Member, AnnotatedElement {
 
+  }
+
+  private void createDefaultCut() throws ODataJPAModelException {
+    final Attribute<?, ?> jpaAttribute = helper.getDeclaredAttribute(helper.getEmbeddableType("PostalAddressData"),
+        "countryName");
+    cut = new IntermediateDescriptionProperty(nameBuilder, jpaAttribute, et, helper.schema);
+    cut.lazyBuildEdmItem();
+  }
+
+  private Attribute<?, ?> createAttributeMock(final boolean association, final boolean associationName,
+      final int langFields) {
+    final Attribute<?, ?> attribute = mock(Attribute.class);
+    final ManagedType<?> mgedType = mock(ManagedType.class);
+    final Member member = mock(AnnotatedMember.class);
+
+    when(attribute.getName()).thenReturn("WithLocationField");
+    when(attribute.getJavaMember()).thenReturn(member);
+    when(attribute.getDeclaringType()).thenAnswer(new Answer<ManagedType<?>>() {
+      @Override
+      public ManagedType<?> answer(final InvocationOnMock invocation) throws Throwable {
+        return mgedType;
+      }
+    });
+    when(attribute.getJavaType()).thenAnswer(new Answer<Class<?>>() {
+      @Override
+      public Class<?> answer(final InvocationOnMock invocation) throws Throwable {
+        return Country.class;
+      }
+    });
+
+    when(mgedType.getJavaType()).thenAnswer(new Answer<Class<BusinessPartner>>() {
+      @Override
+      public Class<BusinessPartner> answer(final InvocationOnMock invocation) throws Throwable {
+        return BusinessPartner.class;
+      }
+    });
+    if (association) {
+      final EdmDescriptionAssociation a = mock(EdmDescriptionAssociation.class);
+      when(((AnnotatedElement) member).getAnnotation(EdmDescriptionAssociation.class)).thenReturn(a);
+      if (associationName)
+        when(a.descriptionAttribute()).thenReturn("name");
+      if (langFields > 0)
+        when(a.languageAttribute()).thenReturn("language");
+      if (langFields > 1)
+        when(a.localeAttribute()).thenReturn("location");
+    }
+    return attribute;
   }
 }
