@@ -1,6 +1,7 @@
 package com.sap.olingo.jpa.processor.core.filter;
 
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
@@ -23,7 +24,7 @@ import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPADataBaseFunction;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAOperationResultParameter;
 import com.sap.olingo.jpa.processor.core.testmodel.AdministrativeDivision;
 
-public class TestJPAFunctionOperator {
+class TestJPAFunctionOperator {
   private CriteriaBuilder cb;
   private JPAFunctionOperator cut;
   private UriResourceFunction uriFunction;
@@ -33,7 +34,7 @@ public class TestJPAFunctionOperator {
   private List<UriParameter> uriParams;
 
   @BeforeEach
-  public void setUp() throws Exception {
+  void setUp() throws Exception {
 
     cb = mock(CriteriaBuilder.class);
     jpaVisitor = mock(JPAVisitor.class);
@@ -42,7 +43,7 @@ public class TestJPAFunctionOperator {
     jpaFunction = mock(JPADataBaseFunction.class);
     jpaResultParam = mock(JPAOperationResultParameter.class);
     when(jpaFunction.getResultParameter()).thenReturn(jpaResultParam);
-    List<UriResource> resources = new ArrayList<>();
+    final List<UriResource> resources = new ArrayList<>();
     resources.add(uriFunction);
 
     uriParams = new ArrayList<>();
@@ -52,45 +53,41 @@ public class TestJPAFunctionOperator {
 
   @SuppressWarnings("unchecked")
   @Test
-  public void testReturnsExpression() throws ODataApplicationException {
+  void testReturnsExpression() throws ODataApplicationException {
 
     final Expression<?>[] jpaParameter = new Expression<?>[0];
 
     when(jpaFunction.getDBName()).thenReturn("Test");
-    doReturn(new Integer(5).getClass()).when(jpaResultParam).getType();
+    doReturn(Integer.valueOf(5).getClass()).when(jpaResultParam).getType();
     when(cb.function(jpaFunction.getDBName(), jpaResultParam.getType(), jpaParameter)).thenReturn(mock(
         Expression.class));
     when(jpaFunction.getResultParameter()).thenReturn(jpaResultParam);
-    Expression<?> act = cut.get();
+    final Expression<?> act = cut.get();
     assertNotNull(act);
   }
 
   @Test
-  public void testAbortOnNonFunctionReturnsCollection() {
+  void testAbortOnNonFunctionReturnsCollection() {
 
     when(jpaFunction.getDBName()).thenReturn("org.apache.olingo.jpa::Siblings");
     when(jpaResultParam.isCollection()).thenReturn(true);
 
     try {
       cut.get();
-    } catch (ODataApplicationException e) {
+    } catch (final ODataApplicationException e) {
       return;
     }
     fail("Function provided not checked");
   }
 
   @Test
-  public void testAbortOnNonScalarFunction() {
+  void testAbortOnNonScalarFunction() {
 
     when(jpaFunction.getDBName()).thenReturn("org.apache.olingo.jpa::Siblings");
     when(jpaResultParam.isCollection()).thenReturn(false);
     doReturn(AdministrativeDivision.class).when(jpaResultParam).getType();
 
-    try {
-      cut.get();
-    } catch (ODataApplicationException e) {
-      return;
-    }
-    fail("Function provided not checked");
+    assertThrows(ODataApplicationException.class, () -> cut.get());
+
   }
 }
