@@ -7,8 +7,10 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import javax.persistence.Tuple;
 
@@ -20,25 +22,30 @@ import org.apache.olingo.server.api.ODataApplicationException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAEntityType;
+import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAPath;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.exception.ODataJPAModelException;
+import com.sap.olingo.jpa.processor.core.api.JPAODataRequestContextAccess;
 import com.sap.olingo.jpa.processor.core.converter.JPATupleChildConverter;
+import com.sap.olingo.jpa.processor.core.processor.JPAODataInternalRequestContext;
 import com.sap.olingo.jpa.processor.core.util.ServiceMetadataDouble;
 import com.sap.olingo.jpa.processor.core.util.TestBase;
 import com.sap.olingo.jpa.processor.core.util.TestHelper;
 import com.sap.olingo.jpa.processor.core.util.TupleDouble;
 import com.sap.olingo.jpa.processor.core.util.UriHelperDouble;
 
-public class TestJPATupleChildConverter extends TestBase {
+class TestJPATupleChildConverter extends TestBase {
   public static final int NO_POSTAL_ADDRESS_FIELDS = 8;
   public static final int NO_ADMIN_INFO_FIELDS = 2;
   private JPATupleChildConverter cut;
   private List<Tuple> jpaQueryResult;
   private UriHelperDouble uriHelper;
   private Map<String, String> keyPredicates;
-  private HashMap<String, List<Tuple>> queryResult = new HashMap<>(1);
+  private final HashMap<String, List<Tuple>> queryResult = new HashMap<>(1);
+  private JPAODataRequestContextAccess requestContext;
 
   @BeforeEach
-  public void setup() throws ODataException {
+  void setup() throws ODataException {
     helper = new TestHelper(emf, PUNIT_NAME);
     jpaQueryResult = new ArrayList<>();
 
@@ -46,49 +53,49 @@ public class TestJPATupleChildConverter extends TestBase {
     uriHelper = new UriHelperDouble();
     keyPredicates = new HashMap<>();
     uriHelper.setKeyPredicates(keyPredicates, "ID");
-
-    cut = new JPATupleChildConverter(helper.sd, uriHelper, new ServiceMetadataDouble(nameBuilder, "Organization"));
-
+    requestContext = new JPAODataInternalRequestContext();
+    cut = new JPATupleChildConverter(helper.sd, uriHelper, new ServiceMetadataDouble(nameBuilder, "Organization"),
+        requestContext);
   }
 
   @Test
-  public void checkConvertsEmptyResult() throws ODataApplicationException, ODataJPAModelException {
+  void checkConvertsEmptyResult() throws ODataApplicationException, ODataJPAModelException {
 
     assertNotNull(cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType("Organizations"),
         Collections.emptyList()), Collections.emptyList()));
   }
 
   @Test
-  public void checkConvertsOneResultOneElement() throws ODataApplicationException, ODataJPAModelException {
-    HashMap<String, Object> result = new HashMap<>();
+  void checkConvertsOneResultOneElement() throws ODataApplicationException, ODataJPAModelException {
+    final HashMap<String, Object> result = new HashMap<>();
 
     result.put("ID", new String("1"));
     jpaQueryResult.add(new TupleDouble(result));
 
     keyPredicates.put("1", "Organizations('1')");
 
-    EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
         "Organizations"), Collections.emptyList()), Collections.emptyList()).get(ROOT_RESULT_KEY);
     assertEquals(1, act.getEntities().size());
     assertEquals("1", act.getEntities().get(0).getProperty("ID").getValue().toString());
   }
 
   @Test
-  public void checkConvertsOneResultOneKey() throws ODataApplicationException, ODataJPAModelException {
-    HashMap<String, Object> result = new HashMap<>();
+  void checkConvertsOneResultOneKey() throws ODataApplicationException, ODataJPAModelException {
+    final HashMap<String, Object> result = new HashMap<>();
     keyPredicates.put("1", "'1'");
 
     result.put("ID", new String("1"));
     jpaQueryResult.add(new TupleDouble(result));
 
-    EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
         "Organizations"), Collections.emptyList()), Collections.emptyList()).get(ROOT_RESULT_KEY);
     assertEquals(1, act.getEntities().size());
     assertEquals("Organizations" + "('1')", act.getEntities().get(0).getId().getPath());
   }
 
   @Test
-  public void checkConvertsTwoResultsOneElement() throws ODataApplicationException, ODataJPAModelException {
+  void checkConvertsTwoResultsOneElement() throws ODataApplicationException, ODataJPAModelException {
     HashMap<String, Object> result;
 
     result = new HashMap<>();
@@ -102,7 +109,7 @@ public class TestJPATupleChildConverter extends TestBase {
     keyPredicates.put("1", "Organizations('1')");
     keyPredicates.put("5", "Organizations('5')");
 
-    EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
         "Organizations"), Collections.emptyList()), Collections.emptyList()).get(ROOT_RESULT_KEY);
     assertEquals(2, act.getEntities().size());
     assertEquals("1", act.getEntities().get(0).getProperty("ID").getValue().toString());
@@ -110,7 +117,7 @@ public class TestJPATupleChildConverter extends TestBase {
   }
 
   @Test
-  public void checkConvertsOneResultsTwoElements() throws ODataApplicationException, ODataJPAModelException {
+  void checkConvertsOneResultsTwoElements() throws ODataApplicationException, ODataJPAModelException {
     HashMap<String, Object> result;
 
     result = new HashMap<>();
@@ -120,7 +127,7 @@ public class TestJPATupleChildConverter extends TestBase {
 
     keyPredicates.put("1", "Organizations('1')");
 
-    EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
         "Organizations"), Collections.emptyList()), Collections.emptyList()).get(ROOT_RESULT_KEY);
     assertEquals(1, act.getEntities().size());
     assertEquals("1", act.getEntities().get(0).getProperty("ID").getValue().toString());
@@ -128,18 +135,18 @@ public class TestJPATupleChildConverter extends TestBase {
   }
 
   @Test
-  public void checkConvertsOneResultsTwoElementsSelectionWithEtag() throws ODataApplicationException,
+  void checkConvertsOneResultsTwoElementsSelectionWithEtag() throws ODataApplicationException,
       ODataJPAModelException {
 
     cut = new JPATupleChildConverter(helper.sd, uriHelper, new ServiceMetadataDouble(nameBuilder,
-        "BusinessPartnerProtected"));
+        "BusinessPartnerProtected"), requestContext);
     HashMap<String, Object> result;
     result = new HashMap<>();
     result.put("ID", new String("1"));
-    result.put("ETag", new Integer(2));
+    result.put("ETag", Integer.valueOf(2));
     jpaQueryResult.add(new TupleDouble(result));
 
-    EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
         "BusinessPartnerProtecteds"), Collections.emptyList()), Collections.emptyList()).get(ROOT_RESULT_KEY);
     assertEquals(1, act.getEntities().size());
     assertEquals(1, act.getEntities().get(0).getProperties().size());
@@ -149,7 +156,7 @@ public class TestJPATupleChildConverter extends TestBase {
   }
 
   @Test
-  public void checkConvertsOneResultsOneComplexElement() throws ODataApplicationException, ODataJPAModelException {
+  void checkConvertsOneResultsOneComplexElement() throws ODataApplicationException, ODataJPAModelException {
     HashMap<String, Object> result;
 
     result = new HashMap<>();
@@ -166,23 +173,20 @@ public class TestJPATupleChildConverter extends TestBase {
 
     keyPredicates.put("1", "Organizations('1')");
 
-    EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
         "Organizations"), Collections.emptyList()), Collections.emptyList()).get(ROOT_RESULT_KEY);
     assertEquals(1, act.getEntities().size());
 
     assertEquals(ValueType.COMPLEX, act.getEntities().get(0).getProperty("Address").getValueType());
-    ComplexValue value = (ComplexValue) act.getEntities().get(0).getProperty("Address").getValue();
+    final ComplexValue value = (ComplexValue) act.getEntities().get(0).getProperty("Address").getValue();
     assertEquals(NO_POSTAL_ADDRESS_FIELDS, value.getValue().size());
   }
 
   @Test
-  public void checkConvertsOneResultsOneNestedComplexElement() throws ODataApplicationException,
+  void checkConvertsOneResultsOneNestedComplexElement() throws ODataApplicationException,
       ODataJPAModelException {
     HashMap<String, Object> result;
 
-//    AdministrativeInformation adminInfo = new AdministrativeInformation();
-//    adminInfo.setCreated(new ChangeInformation("Joe Doe", Timestamp.valueOf("2016-01-22 12:25:23")));
-//    adminInfo.setUpdated(new ChangeInformation("Joe Doe", Timestamp.valueOf("2016-01-24 14:29:45")));
     result = new HashMap<>();
     result.put("ID", "1");
     result.put("AdministrativeInformation/Created/By", "Joe Doe");
@@ -193,19 +197,20 @@ public class TestJPATupleChildConverter extends TestBase {
 
     keyPredicates.put("1", "Organizations('1')");
 
-    EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
         "Organizations"), Collections.emptyList()), Collections.emptyList()).get(ROOT_RESULT_KEY);
     assertEquals(1, act.getEntities().size());
     // Check first level
     assertEquals(ValueType.COMPLEX, act.getEntities().get(0).getProperty("AdministrativeInformation").getValueType());
-    ComplexValue value = (ComplexValue) act.getEntities().get(0).getProperty("AdministrativeInformation").getValue();
+    final ComplexValue value = (ComplexValue) act.getEntities().get(0).getProperty("AdministrativeInformation")
+        .getValue();
     assertEquals(NO_ADMIN_INFO_FIELDS, value.getValue().size());
     // Check second level
     assertEquals(ValueType.COMPLEX, value.getValue().get(0).getValueType());
   }
 
   @Test
-  public void checkConvertsOneResultsOneElementOfComplexElement() throws ODataApplicationException,
+  void checkConvertsOneResultsOneElementOfComplexElement() throws ODataApplicationException,
       ODataJPAModelException {
     HashMap<String, Object> result;
 
@@ -216,7 +221,7 @@ public class TestJPATupleChildConverter extends TestBase {
 
     keyPredicates.put("1", "Organizations('1')");
 
-    EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, helper.getJPAEntityType(
         "Organizations"), Collections.emptyList()), Collections.emptyList()).get(ROOT_RESULT_KEY);
     assertEquals(1, act.getEntities().size());
     assertEquals("CA", ((ComplexValue) act.getEntities().get(0).getProperty("Address").getValue()).getValue().get(0)
@@ -224,46 +229,98 @@ public class TestJPATupleChildConverter extends TestBase {
   }
 
   @Test
-  public void checkConvertMediaStreamStaticMime() throws ODataJPAModelException, NumberFormatException,
+  void checkConvertsOneResultPrimitiveIncludingTransient() throws ODataApplicationException,
+      ODataJPAModelException {
+    cut = new JPATupleChildConverter(helper.sd, uriHelper, new ServiceMetadataDouble(nameBuilder, "Person"),
+        requestContext);
+    final Map<String, Object> result;
+    final Set<JPAPath> selection = new HashSet<>();
+    final JPAEntityType et = helper.getJPAEntityType("Persons");
+    result = new HashMap<>();
+    result.put("ID", "1");
+    result.put("FirstName", new String("Willi"));
+    result.put("LastName", new String("Wichtig"));
+    jpaQueryResult.add(new TupleDouble(result));
+    selection.add(et.getPath("ID"));
+    selection.add(et.getPath("FullName"));
+
+    keyPredicates.put("1", "Persons('99')");
+
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, et, Collections.emptyList()),
+        selection).get(ROOT_RESULT_KEY);
+    assertEquals(1, act.getEntities().size());
+    assertEquals(2, act.getEntities().get(0).getProperties().size());
+    assertEquals("Wichtig, Willi", act.getEntities().get(0).getProperty("FullName").getValue().toString());
+  }
+
+  @Test
+  void checkConvertsOneResultComplexIncludingTransient() throws ODataApplicationException,
+      ODataJPAModelException {
+    final Map<String, Object> result;
+    final Set<JPAPath> selection = new HashSet<>();
+    final JPAEntityType et = helper.getJPAEntityType("Organizations");
+    result = new HashMap<>();
+    result.put("ID", "1");
+    result.put("Address/Region", new String("CA"));
+    result.put("Address/StreetName", new String("Test Road"));
+    result.put("Address/HouseNumber", new String("1230"));
+    jpaQueryResult.add(new TupleDouble(result));
+    selection.add(et.getPath("ID"));
+    selection.add(et.getPath("Address/Street"));
+
+    keyPredicates.put("1", "Organizations('1')");
+
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(queryResult, null, et, Collections.emptyList()),
+        selection).get(ROOT_RESULT_KEY);
+    assertEquals(1, act.getEntities().size());
+    assertEquals(2, act.getEntities().get(0).getProperties().size());
+    assertEquals("Test Road 1230", ((ComplexValue) act.getEntities().get(0).getProperty("Address").getValue())
+        .getValue().get(0)
+        .getValue().toString());
+  }
+
+  @Test
+  void checkConvertMediaStreamStaticMime() throws ODataJPAModelException, NumberFormatException,
       ODataApplicationException {
 
-    HashMap<String, List<Tuple>> result = new HashMap<>(1);
+    final HashMap<String, List<Tuple>> result = new HashMap<>(1);
     result.put("root", jpaQueryResult);
 
-    cut = new JPATupleChildConverter(helper.sd, uriHelper, new ServiceMetadataDouble(nameBuilder, "PersonImage"));
+    cut = new JPATupleChildConverter(helper.sd, uriHelper, new ServiceMetadataDouble(nameBuilder, "PersonImage"),
+        requestContext);
 
     HashMap<String, Object> entityResult;
-    byte[] image = { -119, 10 };
+    final byte[] image = { -119, 10 };
     entityResult = new HashMap<>();
     entityResult.put("ID", "1");
     entityResult.put("Image", image);
     jpaQueryResult.add(new TupleDouble(entityResult));
 
-    EntityCollection act = cut.getResult(new JPAExpandQueryResult(result, null, helper.getJPAEntityType(
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(result, null, helper.getJPAEntityType(
         "PersonImages"), Collections.emptyList()), Collections.emptyList()).get(ROOT_RESULT_KEY);
 
     assertEquals("image/png", act.getEntities().get(0).getMediaContentType());
   }
 
   @Test
-  public void checkConvertMediaStreamDynamicMime() throws ODataJPAModelException, NumberFormatException,
+  void checkConvertMediaStreamDynamicMime() throws ODataJPAModelException, NumberFormatException,
       ODataApplicationException {
 
-    HashMap<String, List<Tuple>> result = new HashMap<>(1);
+    final HashMap<String, List<Tuple>> result = new HashMap<>(1);
     result.put("root", jpaQueryResult);
 
     cut = new JPATupleChildConverter(helper.sd, uriHelper, new ServiceMetadataDouble(nameBuilder,
-        "OrganizationImage"));
+        "OrganizationImage"), requestContext);
 
     HashMap<String, Object> entityResult;
-    byte[] image = { -119, 10 };
+    final byte[] image = { -119, 10 };
     entityResult = new HashMap<>();
     entityResult.put("ID", "9");
     entityResult.put("Image", image);
     entityResult.put("MimeType", "image/svg+xml");
     jpaQueryResult.add(new TupleDouble(entityResult));
 
-    EntityCollection act = cut.getResult(new JPAExpandQueryResult(result, null, helper.getJPAEntityType(
+    final EntityCollection act = cut.getResult(new JPAExpandQueryResult(result, null, helper.getJPAEntityType(
         "OrganizationImages"), Collections.emptyList()), Collections.emptyList()).get(ROOT_RESULT_KEY);
     assertEquals("image/svg+xml", act.getEntities().get(0).getMediaContentType());
     assertEquals(2, act.getEntities().get(0).getProperties().size());
